--- a/src/main/resources/templates/pages/listaProductos.html
+++ b/src/main/resources/templates/pages/listaProductos.html
@@ -2,33 +2,29 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Productos</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <title>Lista de Productos</title>
 </head>
-<body class="bg-gray-100 p-10">
-<div class="max-w-5xl mx-auto bg-white rounded-xl shadow-md p-6">
-    <h2 class="text-xl font-bold text-gray-800 mb-4">Lista de Productos</h2>
-    <table class="w-full text-sm text-left text-gray-700 border">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-200">
-        <tr>
-            <th class="px-4 py-2">Código</th>
-            <th class="px-4 py-2">Nombre</th>
-            <th class="px-4 py-2">Precio</th>
-            <th class="px-4 py-2">Proveedor</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="p : ${productos}" class="hover:bg-gray-100 border-b">
-            <td class="px-4 py-2" th:text="${p.codigo}"></td>
-            <td class="px-4 py-2" th:text="${p.nombre}"></td>
-            <td class="px-4 py-2" th:text="${p.precioUnitario}"></td>
-            <td class="px-4 py-2" th:text="${p.proveedor.nombre}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<body>
+<h1>Lista de Productos</h1>
+
+<table >
+    <thead>
+    <tr>
+        <th>Código</th>
+        <th>Nombre</th>
+        <th>Precio</th>
+        <th>Proveedor</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="product : ${productos}">
+        <td th:text="${product.codigo}"></td>
+
+        <td th:text="${product.nombre}"></td>
+        <td th:text="${product.precioUnitario}"></td>
+        <td th:text="${product.proveedor}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
